.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:45:31 **** Incremental Build of configuration Debug for project qb79616 ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/bq79616_V2.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/bq79616_V2.d" -MT"Core/Src/bq79616_V2.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/bq79616_V2.o"
../Core/Src/bq79616_V2.c: In function 'Wake79600':
../Core/Src/bq79616_V2.c:141:17: warning: unused variable 'received_data' [-Wunused-variable]
  141 |         uint8_t received_data = 0;
      |                 ^~~~~~~~~~~~~
../Core/Src/bq79616_V2.c: In function 'Bridge_AutoAddress':
../Core/Src/bq79616_V2.c:335:35: error: 'received_data' undeclared (first use in this function)
  335 |      readReg(0, OTP_ECC_DATAIN1, &received_data, 1, 0, FRMWRT_STK_R);
      |                                   ^~~~~~~~~~~~~
../Core/Src/bq79616_V2.c:335:35: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/bq79616_V2.c: In function 'check_cell_balancing':
../Core/Src/bq79616_V2.c:683:13: warning: unused variable 'balance_mask' [-Wunused-variable]
  683 |     uint8_t balance_mask = 0x00;  // Bitmask for which cells to balance
      |             ^~~~~~~~~~~~
../Core/Src/bq79616_V2.c:682:28: warning: unused variable 'min_voltage' [-Wunused-variable]
  682 |     float max_voltage = 0, min_voltage = 100;
      |                            ^~~~~~~~~~~
../Core/Src/bq79616_V2.c:682:11: warning: unused variable 'max_voltage' [-Wunused-variable]
  682 |     float max_voltage = 0, min_voltage = 100;
      |           ^~~~~~~~~~~
../Core/Src/bq79616_V2.c:681:15: warning: unused variable 'voltages' [-Wunused-variable]
  681 |         float voltages[16];
      |               ^~~~~~~~
../Core/Src/bq79616_V2.c: In function 'nfault_enable':
../Core/Src/bq79616_V2.c:749:17: warning: unused variable 'rstVal' [-Wunused-variable]
  749 |         uint8_t rstVal = 0x54;
      |                 ^~~~~~
../Core/Src/bq79616_V2.c: In function 'configure_OTUT':
../Core/Src/bq79616_V2.c:789:17: warning: unused variable 'gpioConf' [-Wunused-variable]
  789 |         uint8_t gpioConf= 0x09; //for simplicity enable all gpio thermistors
      |                 ^~~~~~~~
../Core/Src/bq79616_V2.c: In function 'readCellVoltages':
../Core/Src/bq79616_V2.c:836:18: warning: unused variable 'loRegAddr' [-Wunused-variable]
  836 |         uint16_t loRegAddr = hiRegAddr + 1;
      |                  ^~~~~~~~~
../Core/Src/bq79616_V2.c:832:13: warning: unused variable 'full_cell_voltage' [-Wunused-variable]
  832 |     uint8_t full_cell_voltage[2];
      |             ^~~~~~~~~~~~~~~~~
../Core/Src/bq79616_V2.c:825:21: warning: variable 'cellVoltages' set but not used [-Wunused-but-set-variable]
  825 |                 int cellVoltages[16] = {0}; // Index 0 = Cell16, index 15 = Cell1
      |                     ^~~~~~~~~~~~
../Core/Src/bq79616_V2.c: In function 'readBoardVoltages':
../Core/Src/bq79616_V2.c:882:18: warning: unused variable 'loRegAddr' [-Wunused-variable]
  882 |         uint16_t loRegAddr = hiRegAddr + 1;
      |                  ^~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/bq79616_V2.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.
17:46:27 **** Incremental Build of configuration Debug for project qb79616 ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/bq79616_V2.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/bq79616_V2.d" -MT"Core/Src/bq79616_V2.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/bq79616_V2.o"
../Core/Src/bq79616_V2.c: In function 'Wake79600':
../Core/Src/bq79616_V2.c:141:17: warning: unused variable 'received_data' [-Wunused-variable]
  141 |         uint8_t received_data = 0;
      |                 ^~~~~~~~~~~~~
../Core/Src/bq79616_V2.c: In function 'check_cell_balancing':
../Core/Src/bq79616_V2.c:682:13: warning: unused variable 'balance_mask' [-Wunused-variable]
  682 |     uint8_t balance_mask = 0x00;  // Bitmask for which cells to balance
      |             ^~~~~~~~~~~~
../Core/Src/bq79616_V2.c:681:28: warning: unused variable 'min_voltage' [-Wunused-variable]
  681 |     float max_voltage = 0, min_voltage = 100;
      |                            ^~~~~~~~~~~
../Core/Src/bq79616_V2.c:681:11: warning: unused variable 'max_voltage' [-Wunused-variable]
  681 |     float max_voltage = 0, min_voltage = 100;
      |           ^~~~~~~~~~~
../Core/Src/bq79616_V2.c:680:15: warning: unused variable 'voltages' [-Wunused-variable]
  680 |         float voltages[16];
      |               ^~~~~~~~
../Core/Src/bq79616_V2.c: In function 'nfault_enable':
../Core/Src/bq79616_V2.c:748:17: warning: unused variable 'rstVal' [-Wunused-variable]
  748 |         uint8_t rstVal = 0x54;
      |                 ^~~~~~
../Core/Src/bq79616_V2.c: In function 'configure_OTUT':
../Core/Src/bq79616_V2.c:788:17: warning: unused variable 'gpioConf' [-Wunused-variable]
  788 |         uint8_t gpioConf= 0x09; //for simplicity enable all gpio thermistors
      |                 ^~~~~~~~
../Core/Src/bq79616_V2.c: In function 'readCellVoltages':
../Core/Src/bq79616_V2.c:835:18: warning: unused variable 'loRegAddr' [-Wunused-variable]
  835 |         uint16_t loRegAddr = hiRegAddr + 1;
      |                  ^~~~~~~~~
../Core/Src/bq79616_V2.c:831:13: warning: unused variable 'full_cell_voltage' [-Wunused-variable]
  831 |     uint8_t full_cell_voltage[2];
      |             ^~~~~~~~~~~~~~~~~
../Core/Src/bq79616_V2.c:824:21: warning: variable 'cellVoltages' set but not used [-Wunused-but-set-variable]
  824 |                 int cellVoltages[16] = {0}; // Index 0 = Cell16, index 15 = Cell1
      |                     ^~~~~~~~~~~~
../Core/Src/bq79616_V2.c: In function 'readBoardVoltages':
../Core/Src/bq79616_V2.c:881:18: warning: unused variable 'loRegAddr' [-Wunused-variable]
  881 |         uint16_t loRegAddr = hiRegAddr + 1;
      |                  ^~~~~~~~~
arm-none-eabi-gcc -o "qb79616.elf" @"objects.list"   -mcpu=cortex-m3 -T"F:\MOHAMMED ESSAM\Low Voltage S2\BMS\qb79616_projects\qb79616\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="qb79616.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: qb79616.elf
 
arm-none-eabi-size  qb79616.elf 
arm-none-eabi-objdump -h -S qb79616.elf  > "qb79616.list"
   text	   data	    bss	    dec	    hex	filename
  15236	     12	   2196	  17444	   4424	qb79616.elf
Finished building: default.size.stdout
 
Finished building: qb79616.list
 
